kubernetes/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftnl-backend-api
spec:
  selector:
    app.kubernetes.io/name: ftnl-backend-api
  ports:
    - name: http
      port: 8080
      targetPort: http
