kubernetes/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ftnl-backend-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts: [api.file-tunnel.dev]
      secretName: ftnl-api-public-tls
  rules:
    - host: api.file-tunnel.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ftnl-backend-api
                port:
                  name: http
